--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.7.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
+    "sweetalert2": "^11.21.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
