--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.56.2",
