--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^11.7.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
+    "motion": "^12.12.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
