--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "sweetalert2": "^11.21.0",
     "swiper": "^11.2.6",
